--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -7,5 +7,6 @@ allprojects {
 }
 
 dependencies {
-	compile 'com.github.NeutrinosPlatform:scanlibrary:master-SNAPSHOT'
+	//compile 'com.github.NeutrinosPlatform:scanlibrary:master-SNAPSHOT'
+	compile 'com.github.ADERdev:ScanDocument:master-SNAPSHOT'
 }
